LPS-115369 Wrap journal template error to avoid overflow

--- a/modules/apps/journal/journal-content-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/journal/journal-content-web/src/main/resources/META-INF/resources/css/main.scss
@@ -40,6 +40,10 @@
 		}
 	}
 
+	.journal-template-error pre {
+		white-space: pre-wrap;
+	}
+
 	.portlet .portlet-header {
 		flex-wrap: nowrap;
 	}
